added: desktop software developer

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,3 +1,7 @@
 - src: "https://github.com/peedy2495/ansible-desktop-default-software.git"
   scm: git
   version: main
+
+- src: "https://github.com/peedy2495/ansible-desktop-developer-software.git"
+  scm: git
+  version: main
