--- a/desktop-software-default.yml
+++ b/desktop-software-default.yml
@@ -5,10 +5,13 @@
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
   pre_tasks:
+    - name: preparing - turn privilege escalation off for next task, only
+      set_fact:
+        ansible_become: no
+        
     - name: reload external roles
       shell: 'export HOME=/tmp/semaphore; ansible-galaxy install -r roles/requirements.yml --force'
       delegate_to: localhost
-      become: false
 
   roles:
     - role: ansible-desktop-default-software
