added: libreoffice apparmor fix

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -21,3 +21,7 @@
 - src: "https://github.com/geerlingguy/ansible-role-clamav.git"
   scm: git
   version: master
+
+- src: "https://github.com/peedy2495/ansible-apparmor-libreoffice.git"
+  scm: git
+  version: master
