--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -25,3 +25,7 @@
 - src: "https://github.com/peedy2495/ansible-apparmor-libreoffice.git"
   scm: git
   version: main
+
+- src: "https://github.com/peedy2495/ansible-nexus-repositories.git"
+  scm: git
+  version: main
