--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -21,7 +21,7 @@
   pre_tasks:
     - name: import repositories
       ansible.builtin.set_fact:
-        nexus_repos: "{{ lookup('file','vars/nexus_repos.json') | from_json }}"
+        nexusRepos: "{{ lookup('file','vars/nexus_repos.json') | from_json }}"
 
     - name: import credentials
       include_vars: vars/creds.yml
