--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -27,6 +27,9 @@
       include_vars: vars/creds.yml
       no_log: true
 
+    - ansible.builtin.set_fact:
+        nexusPwd: "{{ nexus_pwd }}"
+
   roles:
     - role: ansible-nexus-repositories
     - role: ansible-desktop-default-software
