--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -28,7 +28,7 @@
       no_log: true
 
     - ansible.builtin.set_fact:
-        nexusPwd: "{{ nexus_pwd }}"
+        nexusPwd: "{{ nexusPwd }}"
 
   roles:
     - role: ansible-nexus-repositories
