--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -30,6 +30,9 @@
     - ansible.builtin.set_fact:
         nexusPwd: "{{ nexusPwd }}"
 
+    - debug:
+        var: nexusPwd
+
   roles:
     - role: ansible-nexus-repositories
     - role: ansible-desktop-default-software
