--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -28,7 +28,7 @@
       no_log: true
 
   roles:
-    - role: ansible-globals
+    - role: sem_globals
     - role: ansible-nexus-repositories
     - role: ansible-desktop-default-software
     - role: ansible-desktop-developer-software
