--- a/desktop-software-default.yml
+++ b/desktop-software-default.yml
@@ -1,8 +1,16 @@
 - hosts: all
   gather_facts: true
   vars:
+    # ssh stuff
     ansible_become: yes
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
+  pre_tasks:
+    - name: import repositories
+      ansible.builtin.set_fact:
+        nexusRepos: "{{ lookup('file','vars/nexus_repos.json') | from_json }}"
+
   roles:
+    - role: sem_globals
+    - role: ansible-nexus-repositories
     - role: ansible-desktop-default-software
