--- a/update_external_roles.yml
+++ b/update_external_roles.yml
@@ -6,5 +6,5 @@
 
   pre_tasks:
     - name: reload external roles
-      shell: 'export HOME=/tmp/semaphore; ansible-galaxy install -r roles/requirements.yml --force'
+      ansible.builtin.shell: 'export HOME=/tmp/semaphore; ansible-galaxy install -r roles/requirements.yml --force'
       delegate_to: localhost
