--- a/virgin-desktops-developers.yml
+++ b/virgin-desktops-developers.yml
@@ -26,6 +26,7 @@
   roles:
     - role: sem_globals
     - role: ansible-nexus-repositories
+    - role: ansible-gfx
     - role: ansible-desktop-default-software
     - role: ansible-desktop-developer-software
     - role: ansible-antirootkits
