--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -26,6 +26,7 @@
   roles:
     - role: sem_globals
     - role: ansible-nexus-repositories
+    - role: ansible-gfx
     - role: ansible-desktop-default-software
     - role: ansible-desktop-developer-software
     - role: ansible-antirootkits
