--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -1,9 +1,17 @@
-- name: load requirements for git
-  ansible.builtin.include_vars:
-    file: roles/requirements.yml
-    name: git_repos
+- hosts: cc02
+  gather_facts: true
+  vars:
+    ansible_become: no
+    ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
-- name: testing
-  ansible.builtin.debug:
-    msg: "repo: {{ src }}"
-  with_items: "{{ git_repos }}"
+  tasks:
+
+    - name: load requirements for git
+      ansible.builtin.include_vars:
+        file: roles/requirements.yml
+        name: git_repos
+
+    - name: testing
+      ansible.builtin.debug:
+        msg: "repo: {{ src }}"
+      with_items: "{{ git_repos }}"
