--- a/files/playbooks.yml
+++ b/files/playbooks.yml
@@ -1,4 +1,4 @@
-- src: "https://github.com/peedy2495/sem_globals.git"
+- src: "git@github.com:peedy2495/sem_globals.git"
   scm: git
   version: main
 
