--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -3,7 +3,9 @@
   vars:
     ansible_become: no
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
-    gh_ssh_key: "{{ lookup('env', 'SEMAPHORE_KEY_gh_peedy2495') }}"
+    keyFilePath: "/tmp/semaphore/.ssh/gh_ansible-globals"
+  vars_files:
+    - /var/lib/semaphore/data/sec.yml
 
   tasks:
 
@@ -32,8 +34,16 @@
         state: directory
         mode: 0777
 
-    - debug:
-        msg: "{{ gh_ssh_key }}"
+    - name: create user ssh directory
+      ansible.builtin.file:
+        path: /tmp/semaphore/.ssh
+        state: directory
+
+    - name: deploy temporary keyfile
+      ansible.builtin.copy:
+        content: "{{ gh_ssh_key }}"
+        dest: "{{ keyFilePath }}"
+        mode: 0600
 
     - name: git - clone repositories
       ansible.builtin.git:
@@ -41,6 +51,14 @@
         version: "{{ item.version }}"
         dest: "/tmp/git/{{ item.src | regex_replace('^.*/', '') | replace('.git', '') }}"
         accept_hostkey: yes
-        key_file: "{{ gh_ssh_key }}"
+        key_file: "{{ keyFilePath }}"
+        clone: true
+        force: true
+        update: true
       with_items: "{{ git_repos }}"
       when: item.scm == 'git'
+
+    - name: remove private key
+      ansible.builtin.file:
+        path: "{{ keyFilePath }}"
+        state: absent
