--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -86,8 +86,7 @@
         state: absent
 
     - name: export - storage - mount
-      ansible.builtin.command: "mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
-      become: yes
+      ansible.builtin.shell: "mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
 
     - name: export - storage - create infra export dir
       ansible.builtin.file:
@@ -102,6 +101,6 @@
         remote_src: yes
 
     - name: export - storage - unmount
-      ansible.builtin.command: "umount /mnt"
+      ansible.builtin.shell: "umount /mnt"
       become: yes
     
