--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -86,7 +86,9 @@
         state: absent
 
     - name: export - storage - mount
-      ansible.builtin.shell: "sudo mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
+      ansible.builtin.command: "mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
+      become: yes
+      become_user: root
 
     - name: export - storage - create infra export dir
       ansible.builtin.file:
@@ -101,6 +103,7 @@
         remote_src: yes
 
     - name: export - storage - unmount
-      ansible.builtin.shell: "sudo umount /mnt"
+      ansible.builtin.command: "umount /mnt"
       become: yes
+      become_user: root
     
