--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -1,7 +1,7 @@
 - hosts: cc02
-  gather_facts: true
+  gather_facts: yes
   vars:
-    ansible_become: no
+    ansible_become: yes
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
     keyFilePath: "/tmp/semaphore/.ssh/gh_ansible-globals"
     gitlab_remote_prefix: "http://gitlab.we.goat/we"
@@ -87,8 +87,6 @@
 
     - name: export - storage - mount
       ansible.builtin.command: "mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
-      become: yes
-      become_user: root
 
     - name: export - storage - create infra export dir
       ansible.builtin.file:
@@ -104,6 +102,4 @@
 
     - name: export - storage - unmount
       ansible.builtin.command: "umount /mnt"
-      become: yes
-      become_user: root
     
