--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -1,7 +1,7 @@
 - hosts: cc02
   gather_facts: yes
   vars:
-    ansible_become: yes
+    ansible_become: no
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
     keyFilePath: "/tmp/semaphore/.ssh/gh_ansible-globals"
     gitlab_remote_prefix: "http://gitlab.we.goat/we"
@@ -17,16 +17,12 @@
         src: "{{ playbook_dir }}/files/playbooks.yml"
       delegate_to: localhost
       register: playbooks_content
-      become: yes
-      become_user: semaphore
 
     - name: export - git - load requirements
       ansible.builtin.slurp:
         src: "{{ playbook_dir }}/roles/requirements.yml"
       delegate_to: localhost
       register: requirements_content
-      become: yes
-      become_user: semaphore
 
     - name: export - git - cocatentate the lists
       ansible.builtin.set_fact:
@@ -90,7 +86,7 @@
         state: absent
 
     - name: export - storage - mount
-      ansible.builtin.command: "mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
+      ansible.builtin.shell: "sudo mount /dev/disk/by-uuid/{{ storage_uuid }} /mnt"
 
     - name: export - storage - create infra export dir
       ansible.builtin.file:
@@ -105,5 +101,5 @@
         remote_src: yes
 
     - name: export - storage - unmount
-      ansible.builtin.command: "umount /mnt"
+      ansible.builtin.shell: "sudo umount /mnt"
     
