--- a/desktop-export-items.yml
+++ b/desktop-export-items.yml
@@ -99,7 +99,7 @@
       when: item.uuid == storage_uuid
 
     - name: export - storage - unmount usermount
-      ansible.builtin.shell: "sudo unmount /dev/disk/by-uuid/{{ storage_uuid }}"
+      ansible.builtin.shell: "sudo umount /dev/disk/by-uuid/{{ storage_uuid }}"
       when: storage_mnt_usermount
 
     - name: export - storage - mount
