--- a/desktop-software-all.yml
+++ b/desktop-software-all.yml
@@ -18,10 +18,10 @@
     clamav_offlinedb: yes
     clamav_freshclam_daemon_state: stopped
 
-  pre_tasks:
-    - name: import repositories
-      ansible.builtin.set_fact:
-        nexusRepos: "{{ lookup('file','vars/nexus_repos.json') | from_json }}"
+  #pre_tasks:
+  #  - name: import repositories
+  #    ansible.builtin.set_fact:
+  #      nexusRepos: "{{ lookup('file','vars/nexus_repos.json') | from_json }}"
 
   roles:
     - role: sem_globals
