fixed: runas user semaphore in local

--- a/update_external_roles.yml
+++ b/update_external_roles.yml
@@ -1,6 +1,8 @@
 - hosts: all
   gather_facts: true
   vars:
+    ansible_connection: local
+    ansible_user: semaphore
     ansible_become: no
     ansible_ssh_common_args: "-o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no"
 
